basic form with payment options created

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -24,10 +24,10 @@
     <%= form.label :payment_platforms %>
     <%= form.select :name, payment_platforms_for_select, {} %>
   </div>
-  <div class="field">
+  <%# <div class="field">
     <%= form.label :payment_methods %>
-    <%= form.select :name, payment_methods_for_select, {} %>
-  </div>
+    <%# <%= form.select :name, payment_methods_for_select, {} %>
+  <%# </div> %> 
 
   <%# <div id="payment_platforms" class="form-group">
     <div class="links form-inline">
